# src/api/index.js
@@ -3,10 +3,13 @@ import user from "./auth/index.js"
 import document from "./file-upload/index.js"
 import swagger from "../common/swagger/index.js";
 import payment from "./payment/index.js"
+import profile from "./user-profile/index.js"
 
 const router = express.Router();
 
 router.use("/users", user);
+
+router.use("/profile", profile);
 
 router.use("/document", document);
 
